# computer-science

./: README.md
asm/: gdb-cmds.txt
book1/: 01-binary-search.js  02-bubble-sort.js  03-duplicate-values.js  04-selection-sort.js  05-insertion-sort.js  06-array-intersection.js  07-basic-linter.js  08-print-manager.js  09-recursion.js  10-quicksort.js  11-quickselect.js  12-linked-list.js  13-double-linked-list.js  14-binary-tree.js  15-graphs.js
book11-deep-learning-with-pytorch/: README.txt
book16-learning-bash-shell/: Dockerfile  docker-compose.yml
book17-x64-assembly-step-by-step/: Dockerfile  docker-compose.yml
book18-pytorch-step-by-step/: .gitignore  02-check-torchviz.py
book2-algorithms-sedgewick/: .gitignore
book22-llama-index/: requirements.txt
book23-swiftui/: .gitignore
book3-algorithms-illuminated/: CMakeLists.txt  main.cpp
book4-professional-cpp/: CMakeLists.txt
book4-professional-cpp/ch1/: 01-string_view.cpp
book4-professional-cpp/ch7/: 01-new-delete.cpp  02-smart-pointers.cpp
book4-professional-cpp/ch8/: SpreadsheetCell.cpp  SpreadsheetCell.h  test_spreadsheet_cell.cpp
book4-professional-cpp/ch9/: 01-friend.cpp  02-spreadsheet.cpp  Spreadsheet.cpp  Spreadsheet.h  SpreadsheetApplication.cpp  SpreadsheetApplication.h
cpp/: .gitignore  1-stepfunction.cpp  10-function-object.cpp  10-function-pointer.cpp  10-lambda-capture-this.cpp  10-lambda-expressions.cpp  10-std-function.cpp  10-variadic-function.cpp  10-variadic-templates.cpp  11-testing-boost-test-library.cpp  11-testing-catch-framework.cpp  11-testing-google-mock-framework.cpp  (+80 more)
(+1128 files in other folders)
